src/test/ui/error-codes/E0637.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/E0637.rs:1:24
   |
LL | fn underscore_lifetime<'_>(str1: &'_ str, str2: &'_ str) -> &'_ str {
   |                        ^^ `'_` is a reserved lifetime name

error[E0106]: missing lifetime specifier
  --> $DIR/E0637.rs:1:62
   |
LL | fn underscore_lifetime<'_>(str1: &'_ str, str2: &'_ str) -> &'_ str {
   |                                  -------        -------      ^^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `str1` or `str2`
help: consider introducing a named lifetime parameter
   |
LL | fn underscore_lifetime<'a, '_>(str1: &'_ str, str2: &'_ str) -> &'a str {
   |                        +++                                       ~~

error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/E0637.rs:15:13
   |
LL |     T: Into<&u32>,
   |             ^ explicit lifetime name needed here

error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/E0637.rs:5:9
   |
LL |         str1
   |         ^^^^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the anonymous lifetime defined here
  --> $DIR/E0637.rs:1:34
   |
LL | fn underscore_lifetime<'_>(str1: &'_ str, str2: &'_ str) -> &'_ str {
   |                                  ^^^^^^^

error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/E0637.rs:8:9
   |
LL |         str2
   |         ^^^^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the anonymous lifetime defined here
  --> $DIR/E0637.rs:1:49
   |
LL | fn underscore_lifetime<'_>(str1: &'_ str, str2: &'_ str) -> &'_ str {
   |                                                 ^^^^^^^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0106, E0312, E0637.
For more information about an error, try `rustc --explain E0106`.
